# zeus_science

./: README.md  code_science.ino  demo_megagenial.ino
science_module/: platformio.ini
science_module/include/: Constant.h  custom_msg_test.h  methane_module.h  pub_msg.h  rotationnal_loader.h  sample.h  science_module.h  screw.h  sub_msg.h
science_module/src/: main.cpp
science_module/test/: encore_un_test.cpp  functionning_main.cpp  main_with_com.cpp  old_main.cpp  screw_motor_test.cpp  test.cpp
steve_serial/: CMakeLists.txt  README.md  package.xml  setup.py
steve_serial/msg/: new_message.msg  testmsg.msg
steve_serial/src/steve_serial/: arduino_serial.py
zeus_serial/: CMakeLists.txt  package.xml  setup.py
zeus_serial/launch/: arduino_serial.launch
zeus_serial/src/zeus_serial/: arduino_serial.py
