<?xml version="1.0"?>
<package format="2">
  <name>steve_serial</name>
  <version>0.0.0</version>
  <description>The steve_serial package to generate custom message for science module</description>

  <maintainer email="rover.steve@usherbrooke.ca">Loic Boileau</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>message_runtime</depend>

  <export>
  </export>

</package>
