<?xml version="1.0"?>
<package format="2">
  <name>zeus_serial</name>
  <version>0.0.0</version>
  <description>The zeus_serial package</description>

  <maintainer email="loic.boileau@usherbrooke.ca">Loic Boileau</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>message_runtime</depend>

  <export>
  </export>

</package>
